--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ DB_PASSWORD=changeme
 GEMINI_API_KEY=your-gemini-api-key-here
 LLM_DEFAULT_MODEL=gemini/gemini-2.5-flash
 DATABASE_URL=postgresql+asyncpg://taxapp:changeme@localhost:5432/nz_tax
+AUTH_USERNAME=changeme
+AUTH_PASSWORD=changeme
